# artificers-academy

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  future_UI.md
backend/: .env.example  pyproject.toml  railway.json  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: content.py  progress.py  snippets.py  validation.py
backend/app/services/: ast_validator.py  database.py
backend/content/: curriculum-detailed.json  curriculum-mtg.json  curriculum-simple.json  curriculum.json
backend/content/detailed/level1/: phase1_architecture.md  phase2_environment.md  phase3_tool_implementation.md  phase4_inspector.md  phase5_client_integration.md
backend/content/detailed/level2/: phase1_resources_vs_tools.md  phase2_scaffolding.md  phase3_uri_templates.md  phase4_secure_file_io.md  phase5_integration_testing.md
backend/content/detailed/level3/: phase1_api_patterns.md  phase2_dependencies.md  phase3_async_http.md  phase4_caching.md  phase5_validation.md
backend/content/detailed/level4/: phase1_transports.md  phase2_docker.md  phase3_sse_transport.md  phase4_railway.md  phase5_production.md
backend/content/level1/: phase2_mana_base.md  phase4_inspector.md  phase5_grand_summoning.md
backend/content/level2/: phase2_inscribing_tome.md  phase3_cataloging_enchantment.md
backend/content/level3/: phase1_planar_bridges.md  phase4_chronicle_scrying.md  phase5_convergence.md
backend/content/level4/: phase1_spark_ignites.md  phase3_planar_portal.md  phase4_traversing_eternities.md
(+128 files in other folders)
